# min2tray

./: .gitignore  LICENSE  README.md  min2tray.py  pyproject.toml  setup.py
src/demo/: multi_window_demo.py  pywebview_demo.py
src/min2tray/: __init__.py  cli.py  core.py  hotkey.py  process.py  tray.py  window.py
src/min2tray/utils/: __init__.py  exceptions.py  platform.py
src/min2tray/window_manager/: __init__.py  window_base.py  window_factory.py  window_linux.py  window_macos.py  window_windows.py
